apollo-federation/src/connectors/expand/tests/snapshots/api@sibling_fields.graphql.snap
---
source: apollo-federation/src/connectors/expand/tests/mod.rs
expression: api_schema
input_file: apollo-federation/src/connectors/expand/tests/schemas/expand/sibling_fields.graphql
---
directive @defer(label: String, if: Boolean! = true) on FRAGMENT_SPREAD | INLINE_FRAGMENT

type K {
  id: ID!
}

type Query {
  f: T
}

type T {
  k: K
  b: String
}
