apollo-federation/src/connectors/expand/tests/snapshots/api@simple.graphql.snap
---
source: apollo-federation/src/connectors/expand/tests/mod.rs
expression: api_schema
input_file: apollo-federation/src/connectors/expand/tests/schemas/expand/simple.graphql
---
directive @defer(label: String, if: Boolean! = true) on FRAGMENT_SPREAD | INLINE_FRAGMENT

type Query {
  users: [User]
  user(id: ID!): User
}

type User {
  id: ID!
  a: String
  b: String
  c: String
  d: String
}
