apollo-federation/src/connectors/expand/tests/snapshots/api@steelthread.graphql.snap
---
source: apollo-federation/src/connectors/expand/tests/mod.rs
expression: api_schema
input_file: apollo-federation/src/connectors/expand/tests/schemas/expand/steelthread.graphql
---
directive @defer(label: String, if: Boolean! = true) on FRAGMENT_SPREAD | INLINE_FRAGMENT

scalar JSON

type Query {
  users: [User]
  user(id: ID!): User
}

type User {
  id: ID!
  name: String
  username: String
  c: String
  d: String
}
