apollo-federation/src/connectors/expand/tests/snapshots/api@types_used_twice.graphql.snap
---
source: apollo-federation/src/connectors/expand/tests/mod.rs
expression: api_schema
input_file: apollo-federation/src/connectors/expand/tests/schemas/expand/types_used_twice.graphql
---
directive @defer(label: String, if: Boolean! = true) on FRAGMENT_SPREAD | INLINE_FRAGMENT

type A {
  id: ID
}

type B {
  a: A
}

type Query {
  ts: [T]
}

type T {
  a: A
  b: B
}
